--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,5 +24,16 @@ jobs:
     - name: Build
       run: go build -v ./...
 
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.19
+
     - name: Test
       run: go test -v ./...
